# WxYT

./: .gitignore  .gitmodules  CMakeLists.txt  getcert.sh  yt_saves.json.small
data/: WxVideoPlayer.fbp  WxYT.desktop  WxYT.exe.manifest  WxYT.fbp  WxYT.icns  channel.png.h  home.png.h  playpause.png.h  reload.png.h  search.png.h
src/main/: ChannelBox.cpp  ChannelBox.h  ChannelSelectDlg.cpp  ChannelSelectDlg.h  GetVidThread.cpp  GetVidThread.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  PlayerDlg.cpp  PlayerDlg.h  SearchDlg.cpp  SearchDlg.h  UI.cpp  UI.h  VideoBox.cpp  VideoBox.h  main.cpp
src/main/VideoPlayers/Vlc/: PlayerDlg.cpp  PlayerDlg.h
src/main/VideoPlayers/Wx/: PlayerDlg.cpp  PlayerDlg.h  WxPlayer.cpp  WxPlayer.h
src/main/specific/: Cocoa.mm  Gtk.c  Qt.cpp  SearchDlg.cpp  Win32.cpp
